<?xml version="1.0"?>
<package>
  <name>cartographer_hsr</name>
  <version>0.0.0</version>
  <description>Cartographer support for the Toyota HSR</description>
  <maintainer email="julian.mason@tri.global">Mac Mason</maintainer>
  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/cartographer_hsr</url> -->

  <run_depend>cartographer_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hsrb_robot_launch</run_depend>
  <run_depend>rviz</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
